Line spacing fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,6 +67,7 @@ footer .filetype {
 h1 {
     color: #51afef;
     font-size: 2em;
+    line-height: 1.3em;
 }
 
 h2 {
